# Simulation

./: CMakeLists.txt  README.md  benchmark_sase_endurance.CSV  complete_dvsl_interface.html  dase.html  dase_engine.cp311-win_amd64.pyd  dase_engine_phase4b.exp  dase_engine_phase4b.lib  echo_schedule_alpha_1.500000.csv  gw_waveform_alpha_1.500000.csv  pyproject.toml
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  research_initiative.md
.github/workflows/: ci.yml  test-suite.yml
archive/20251102_satp_translation_run_v2/: output_r2.json  output_r4.json
backend/: package.json  server.js  server.js.backup
backend/api/: auth.js  index.js  missions.js
backend/cache/: __init__.py  benchmark.py  benchmark_scheduler.py  cache_manager.py  dase_cache_cli.py  dase_governance_cli.py  echo_templates.py  governance_agent.py  mission_graph.py  profile_generators.py  smoke_test.py  source_maps.py  static_analysis.py  test_cache.py  test_echo_templates.py  test_governance_quick.py  test_profiles.py  warmup.py
backend/engine/: __init__.py  runtime.py
backend/mission_runtime/: __init__.py  mission_planner.py  schema.py
backend/services/: session_store.py  symbolic_eval.py
backend/utils/: helpful_errors.py  progress.py
cache/: .gitignore  README.md  benchmark_history.json  governance_history.json  governance_report.json  static_analysis_report.json
cache/echo_templates/: echo_1.5_0.05_50_linear_exponential_meta.json  echo_1.5_0.1_50_linear_exponential_meta.json  echo_1.5_0.2_50_linear_exponential_meta.json  echo_1.8_0.05_50_linear_exponential_meta.json  echo_1.8_0.1_50_linear_exponential_meta.json  echo_1.8_0.2_50_linear_exponential_meta.json  echo_2_0.05_50_linear_exponential_meta.json  echo_2_0.1_50_linear_exponential_meta.json  echo_2_0.2_50_linear_exponential_meta.json  index.json
cache/fftw_wisdom/: index.json
cache/fractional_kernels/: index.json
cache/mission_graph/: analyze_8da431fbd646992e.json  create_engine_7314e55727859ca1.json  evolve_fab2ed4b09fae4b3.json  index.json  snapshot_27b13333f1762cf6.json
cache/source_maps/: index.json
cache/state_profiles/: index.json
cache/stencils/: index.json  laplacian_2d_128x128.json  laplacian_2d_256x256.json  laplacian_2d_512x512.json  laplacian_2d_64x64.json  laplacian_3d_128x128x128.json  laplacian_3d_32x32x32.json  laplacian_3d_64x64x64.json  laplacian_64x64_meta.json
cache/surrogates/: index.json
dase_cli/: CMakeLists.txt  FFTW3_VALIDATION_REPORT.md  QUICKSTART.txt  VALIDATION_REPORT.md  examples.json  igsoa_test_commands.json  igsoa_test_commands_v2.json  output_Rc0.5.json  output_Rc0.5_t1.json  output_Rc1.0.json  output_Rc1.0_t1.json  output_Rc10.0.json  output_Rc10.0_t1.json  output_Rc2.0.json  output_Rc2.0_t1.json  output_Rc5.0.json  output_Rc5.0_t1.json  output_fine_Rc0.5_t1.json  output_fine_Rc1.0_t1.json  output_fine_Rc10.0_t1.json  output_fine_Rc2.0_t1.json  output_fine_Rc5.0_t1.json  output_hiamp_t1.json  output_hiamp_t10.json  output_hiamp_t20.json  output_hiamp_t5.json  output_hiamp_t50.json  output_t1.json  output_t10.json  output_t20.json  output_t5.json  output_t50.json  output_time_Rc0.5_t1.json  output_time_Rc0.5_t10.json  output_time_Rc0.5_t2.json  output_time_Rc0.5_t3.json  output_time_Rc0.5_t5.json  output_time_Rc5.0_t1.json  output_time_Rc5.0_t10.json  output_time_Rc5.0_t2.json  (+31 more)
dase_cli/analysis_Rc0.5/: analysis_report_R0.5.txt
dase_cli/analysis_Rc0.5_t1/: analysis_report_R0.5.txt
dase_cli/analysis_Rc1.0/: analysis_report_R1.0.txt
dase_cli/analysis_Rc10.0/: analysis_report_R10.0.txt
dase_cli/analysis_Rc10.0_t1/: analysis_report_R10.0.txt
dase_cli/analysis_Rc2.0/: analysis_report_R2.0.txt
dase_cli/analysis_Rc2.0_t1/: analysis_report_R2.0.txt
dase_cli/analysis_Rc5.0/: analysis_report_R5.0.txt
dase_cli/analysis_Rc5.0_t1/: analysis_report_R5.0.txt
dase_cli/analysis_fine_Rc0.5_t1/: analysis_report_R0.5.txt
dase_cli/analysis_fine_Rc1.0_t1/: analysis_report_R1.0.txt
dase_cli/analysis_fine_Rc10.0_t1/: analysis_report_R10.0.txt
dase_cli/analysis_fine_Rc2.0_t1/: analysis_report_R2.0.txt
dase_cli/analysis_fine_Rc5.0_t1/: analysis_report_R5.0.txt
dase_cli/analysis_hiamp_t1/: analysis_report_R1.0.txt
dase_cli/analysis_hiamp_t10/: analysis_report_R1.0.txt
dase_cli/analysis_hiamp_t20/: analysis_report_R1.0.txt
dase_cli/analysis_hiamp_t5/: analysis_report_R1.0.txt
dase_cli/analysis_hiamp_t50/: analysis_report_R1.0.txt
dase_cli/analysis_t1/: analysis_report_R1.0.txt
dase_cli/analysis_t10/: analysis_report_R1.0.txt
dase_cli/analysis_t20/: analysis_report_R1.0.txt
dase_cli/analysis_t5/: analysis_report_R1.0.txt
dase_cli/analysis_t50/: analysis_report_R1.0.txt
dase_cli/analysis_time_Rc0.5_t1/: analysis_report_R0.5.txt
dase_cli/analysis_time_Rc0.5_t10/: analysis_report_R0.5.txt
dase_cli/analysis_time_Rc0.5_t2/: analysis_report_R0.5.txt
dase_cli/analysis_time_Rc0.5_t3/: analysis_report_R0.5.txt
dase_cli/analysis_time_Rc0.5_t5/: analysis_report_R0.5.txt
dase_cli/analysis_time_Rc5.0_t1/: analysis_report_R5.0.txt
dase_cli/analysis_time_Rc5.0_t10/: analysis_report_R5.0.txt
dase_cli/analysis_time_Rc5.0_t2/: analysis_report_R5.0.txt
dase_cli/analysis_time_Rc5.0_t3/: analysis_report_R5.0.txt
dase_cli/analysis_time_Rc5.0_t5/: analysis_report_R5.0.txt
dase_cli/src/: command_router.cpp  command_router.h  engine_manager.cpp  engine_manager.h  main.cpp
docs/: COMMAND_CENTER_SPECIFICATION.md  INDEX.md
docs/getting-started/: INSTRUCTIONS.md
docs/implementation/: WEB_SECURITY_IMPLEMENTATION.md
docs/reviews/: COMMAND_CENTER_CHECKPOINT.md
results/: output_rc_0.5.json  output_rc_5.0.json
src/cpp/: analog_universal_node_engine_avx2.cpp
src/python/: bridge_server.py  bridge_server_improved.py  dase_engine.cp311-win_amd64.pyd
tests/: test_gw_engine_basic.cpp  test_gw_waveform_generation.cpp
web/: README.md  WEB_INTERFACE_ANALYSIS.md  complete_dvsl_interface.html  index.html
web/archive/: README.md  dase_interface_2025-11-10.html
web/command-center/: index.html  package.json  (+3 more)
(+68 files in other folders)
